--- a/app/src/main/res/layout/dialog_delete_plan.xml
+++ b/app/src/main/res/layout/dialog_delete_plan.xml
@@ -1,82 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#4D000000">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        app:cardCornerRadius="7dp"
+        app:cardCornerRadius="10dp"
         app:cardElevation="0dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:id="@+id/tv_dialog_delete_text"
                 android:layout_width="wrap_content"
                 android:layout_height="22dp"
-                android:text="약속을 삭제하시겠습니까?"
-                android:fontFamily="@font/pretendard_bold"
-                android:textSize="18sp"
-                android:textColor="@color/gray800"
                 android:layout_marginTop="54dp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:fontFamily="@font/pretendard_bold"
+                android:text="약속을 삭제하시겠습니까?"
+                android:textColor="@color/texthigh"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <View
                 android:id="@+id/v_dialog_delete_1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/gray100"
                 android:layout_marginTop="43dp"
-                app:layout_constraintTop_toBottomOf="@id/tv_dialog_delete_text"/>
+                android:background="@color/gray100"
+                app:layout_constraintTop_toBottomOf="@id/tv_dialog_delete_text" />
 
             <TextView
                 android:id="@+id/tv_dialog_delete_btn_cancel"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:text="취소"
                 android:fontFamily="@font/pretendard"
-                android:textSize="16sp"
-                android:textColor="@color/gray500"
                 android:paddingVertical="18dp"
+                android:text="@string/cancel"
                 android:textAlignment="center"
-                app:layout_constraintWidth_percent="0.5"
+                android:textColor="@color/gray500"
+                android:textSize="16sp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/v_dialog_delete_1"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintWidth_percent="0.5" />
 
             <TextView
                 android:id="@+id/tv_dialog_delete_btn_delete"
                 android:layout_width="0dp"
                 android:layout_height="60dp"
-                android:text="삭제"
                 android:fontFamily="@font/pretendard_bold"
-                android:textSize="16sp"
-                android:textColor="@color/purpleMain"
                 android:paddingVertical="18dp"
+                android:text="@string/delete"
                 android:textAlignment="center"
-                app:layout_constraintWidth_percent="0.5"
+                android:textColor="@color/purpleMain"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/v_dialog_delete_1"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintWidth_percent="0.5" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="24dp"
                 android:background="@color/gray100"
-                app:layout_constraintTop_toBottomOf="@id/v_dialog_delete_1"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toStartOf="@id/tv_dialog_delete_btn_delete"
+                app:layout_constraintStart_toEndOf="@id/tv_dialog_delete_btn_cancel"
+                app:layout_constraintTop_toBottomOf="@id/v_dialog_delete_1" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
