--- a/app/src/main/res/layout/dialog_exit_group.xml
+++ b/app/src/main/res/layout/dialog_exit_group.xml
@@ -1,67 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/layout_sidedialog">
-        <TextView
-            android:id="@+id/exit_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="22sp"
-            android:text="모임을 나가시겠습니까?"
-            android:fontFamily="@font/pretendard_bold"
-            android:textSize="18sp"
-            android:textColor="@color/gray800"
-            android:layout_marginTop="36dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/exit_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="22sp"
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/pretendard_bold"
+        android:text="모임을 나가시겠습니까?"
+        android:textColor="@color/gray800"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-            android:id="@+id/exit_v"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/gray100"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@id/exit_tv"/>
+    <View
+        android:id="@+id/exit_v"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="32dp"
+        android:background="@color/gray100"
+        app:layout_constraintTop_toBottomOf="@id/exit_tv" />
 
-        <TextView
-            android:id="@+id/exit_cancel"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="취소"
-            android:fontFamily="@font/pretendard"
-            android:textSize="16sp"
-            android:textColor="@color/gray500"
-            android:paddingVertical="18dp"
-            android:textAlignment="center"
-            app:layout_constraintWidth_percent="0.5"
-            app:layout_constraintTop_toBottomOf="@id/exit_v"
-            app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:id="@+id/exit_cancel"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:fontFamily="@font/pretendard"
+        android:paddingVertical="18dp"
+        android:text="취소"
+        android:textAlignment="center"
+        android:textColor="@color/gray500"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/exit_v"
+        app:layout_constraintWidth_percent="0.5" />
 
-        <TextView
-            android:id="@+id/exit_done"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:text="나가기"
-            android:fontFamily="@font/pretendard_bold"
-            android:textSize="16sp"
-            android:textColor="@color/purpleMain"
-            android:paddingVertical="18dp"
-            android:textAlignment="center"
-            app:layout_constraintWidth_percent="0.5"
-            app:layout_constraintTop_toBottomOf="@id/exit_v"
-            app:layout_constraintEnd_toEndOf="parent"/>
+    <TextView
+        android:id="@+id/exit_done"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:fontFamily="@font/pretendard_bold"
+        android:paddingVertical="18dp"
+        android:text="나가기"
+        android:textAlignment="center"
+        android:textColor="@color/purpleMain"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/exit_v"
+        app:layout_constraintWidth_percent="0.5" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="24dp"
-            android:background="@color/gray100"
-            app:layout_constraintTop_toBottomOf="@id/exit_v"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+    <View
+        android:layout_width="1dp"
+        android:layout_height="24dp"
+        android:background="@color/gray100"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/exit_v" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
