--- a/app/src/main/res/layout/activity_detail_edit_past.xml
+++ b/app/src/main/res/layout/activity_detail_edit_past.xml
@@ -44,10 +44,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
+                android:enabled="false"
                 android:fontFamily="@font/pretendard"
                 android:text="완료"
                 android:textColor="@color/select_btn"
-                android:enabled="false"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="@id/title_tv"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="46dp"
+                android:paddingTop="24dp"
                 app:boxBackgroundColor="@android:color/transparent"
+                app:boxBackgroundMode="filled"
                 app:boxStrokeColor="@color/textfield_stroke"
                 app:counterEnabled="true"
                 app:counterMaxLength="20"
@@ -79,19 +81,17 @@
                 app:errorIconDrawable="@drawable/icon_error_end_resize"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title_tv"
-                app:boxBackgroundMode="filled"
-                android:paddingTop="24dp">
+                app:layout_constraintTop_toBottomOf="@id/title_tv">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/name_tf"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:contentDescription="약속이름입력"
                     android:background="@null"
-                    android:textSize="18sp"
+                    android:contentDescription="약속이름입력"
                     android:fontFamily="@font/pretendard"
-                    android:textColor="@color/texthigh"/>
+                    android:textColor="@color/texthigh"
+                    android:textSize="18sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -124,26 +124,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="6dp"
+                android:paddingTop="24dp"
                 app:boxBackgroundColor="@android:color/transparent"
+                app:boxBackgroundMode="filled"
                 app:boxStrokeColor="@color/textfield_stroke"
                 app:counterTextColor="@color/select_focus"
                 app:endIconDrawable="@drawable/icon_calendar_resize"
                 app:endIconMode="custom"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/name_til"
-                app:boxBackgroundMode="filled"
-                android:paddingTop="24dp">
+                app:layout_constraintTop_toBottomOf="@id/name_til">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/date_tf"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:focusableInTouchMode="false"
                     android:background="@null"
-                    android:textSize="18sp"
+                    android:focusableInTouchMode="false"
                     android:fontFamily="@font/pretendard"
-                    android:textColor="@color/texthigh"/>
+                    android:textColor="@color/texthigh"
+                    android:textSize="18sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -163,26 +163,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
                 android:layout_marginTop="26dp"
+                android:paddingTop="24dp"
                 app:boxBackgroundColor="@android:color/transparent"
+                app:boxBackgroundMode="filled"
                 app:boxStrokeColor="@color/textfield_stroke"
                 app:counterTextColor="@color/select_focus"
                 app:endIconDrawable="@drawable/icon_clock_resize"
                 app:endIconMode="custom"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/date_til"
-                app:boxBackgroundMode="filled"
-                android:paddingTop="24dp">
+                app:layout_constraintTop_toBottomOf="@id/date_til">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/time_tf"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:focusableInTouchMode="false"
                     android:background="@null"
-                    android:textSize="18sp"
+                    android:focusableInTouchMode="false"
                     android:fontFamily="@font/pretendard"
-                    android:textColor="@color/texthigh"/>
+                    android:textColor="@color/texthigh"
+                    android:textSize="18sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -208,146 +208,8 @@
                 app:layout_constraintTop_toBottomOf="@id/participants_tv"
                 app:spanCount="2" />
 
-            <View
-                android:id="@+id/line_view"
-                android:layout_width="match_parent"
-                android:layout_height="12dp"
-                android:layout_marginTop="13dp"
-                android:background="@color/gray50"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/participants_rv" />
-
-            <TextView
-                android:id="@+id/history_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:fontFamily="@font/pretendard_bold"
-                android:text="히스토리"
-                android:textColor="@color/texthigh"
-                android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="@id/back_iv"
-                app:layout_constraintTop_toBottomOf="@id/line_view" />
-
-            <TextView
-                android:id="@+id/picture_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="26dp"
-                android:text="사진"
-                android:textColor="@color/select_focus"
-                app:layout_constraintStart_toStartOf="@id/back_iv"
-                app:layout_constraintTop_toBottomOf="@id/history_tv" />
-
-            <View
-                android:id="@+id/picture_plus_view"
-                android:layout_width="88dp"
-                android:layout_height="88dp"
-                android:layout_marginTop="6dp"
-                android:background="@drawable/border_line"
-                app:layout_constraintStart_toStartOf="@id/picture_tv"
-                app:layout_constraintTop_toBottomOf="@id/picture_tv" />
-
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginTop="24dp"
-                android:src="@drawable/icon_image_plus"
-                app:layout_constraintEnd_toEndOf="@id/picture_plus_view"
-                app:layout_constraintStart_toStartOf="@id/picture_plus_view"
-                app:layout_constraintTop_toTopOf="@id/picture_plus_view" />
-
-            <TextView
-                android:id="@+id/count_picture_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="52dp"
-                android:text="사진 추가"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="@id/picture_plus_view"
-                app:layout_constraintStart_toStartOf="@id/picture_plus_view"
-                app:layout_constraintTop_toTopOf="@id/picture_plus_view" />
-
-            <ImageView
-                android:id="@+id/picture_iv"
-                android:layout_width="88dp"
-                android:layout_height="88dp"
-                android:layout_marginStart="10dp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@id/picture_plus_view"
-                app:layout_constraintStart_toEndOf="@id/picture_plus_view"
-                app:layout_constraintTop_toTopOf="@id/picture_plus_view" />
-
-            <View
-                android:id="@+id/picture_view"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
-                app:layout_constraintBottom_toBottomOf="@id/picture_iv"
-                app:layout_constraintEnd_toEndOf="@id/picture_iv"
-                app:layout_constraintStart_toStartOf="@id/picture_iv"
-                app:layout_constraintTop_toTopOf="@id/picture_iv" />
-
-            <ImageView
-                android:id="@+id/picture_delete_iv"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/icon_close_circle"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="@id/picture_view"
-                app:layout_constraintTop_toTopOf="@id/picture_view" />
-
-
-            <TextView
-                android:id="@+id/content_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="26dp"
-                android:text="내용"
-                android:textColor="@color/select_focus"
-                app:layout_constraintStart_toStartOf="@id/back_iv"
-                app:layout_constraintTop_toBottomOf="@id/picture_plus_view" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/content_til"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="24dp"
-                app:boxBackgroundColor="@android:color/transparent"
-                app:boxBackgroundMode="outline"
-                app:boxCornerRadiusTopEnd="0dp"
-                app:boxCornerRadiusTopStart="0dp"
-                app:boxStrokeColor="@color/textfield_stroke"
-                app:counterTextColor="@color/select_focus"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/content_tv">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/content_tf"
-                    android:layout_width="match_parent"
-                    android:layout_height="163dp"
-                    android:contentDescription="약속내용입력"
-                    android:background="@null"
-                    android:gravity="top"
-                    android:padding="25dp"
-                    android:textSize="14sp"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:id="@+id/content_hint_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="25dp"
-                android:fontFamily="@font/pretendard"
-                android:text="내용을 입력하세요."
-                android:textColor="@color/textDisabled"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="@id/content_til"
-                app:layout_constraintTop_toTopOf="@id/content_til" />
-
-
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </ScrollView>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
