--- a/app/src/main/res/layout/dialog_logout.xml
+++ b/app/src/main/res/layout/dialog_logout.xml
@@ -2,66 +2,80 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/layout_sidedialog">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#4D000000">
 
-    <TextView
-        android:id="@+id/logout_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="22sp"
-        android:text="로그아웃 하시겠습니까?"
-        android:fontFamily="@font/pretendard_bold"
-        android:textSize="18sp"
-        android:textColor="@color/gray800"
-        android:layout_marginTop="36dp"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        app:cardCornerRadius="7dp"
+        app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/tv_logout_title"
+                android:layout_width="wrap_content"
+                android:layout_height="22sp"
+                android:text="로그아웃 하시겠습니까?"
+                android:fontFamily="@font/pretendard_bold"
+                android:textSize="18sp"
+                android:textColor="@color/gray800"
+                android:layout_marginTop="36dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
+            <View
+                android:id="@+id/v_logout"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/gray100"
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_logout_title"/>
 
-    <View
-        android:id="@+id/logout_v"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/gray100"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/logout_tv"/>
+            <TextView
+                android:id="@+id/tv_logout_cancel_btn"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:text="취소"
+                android:fontFamily="@font/pretendard"
+                android:textSize="16sp"
+                android:textColor="@color/gray500"
+                android:paddingVertical="18dp"
+                android:textAlignment="center"
+                app:layout_constraintWidth_percent="0.5"
+                app:layout_constraintTop_toBottomOf="@id/v_logout"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-    <TextView
-        android:id="@+id/logout_cancel"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:text="취소"
-        android:fontFamily="@font/pretendard"
-        android:textSize="16sp"
-        android:textColor="@color/gray500"
-        android:paddingVertical="18dp"
-        android:textAlignment="center"
-        app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintTop_toBottomOf="@id/logout_v"
-        app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/tv_logout_logout_btn"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:text="로그아웃"
+                android:fontFamily="@font/pretendard"
+                android:textSize="16sp"
+                android:textColor="@color/purpleMain"
+                android:paddingVertical="18dp"
+                android:textAlignment="center"
+                app:layout_constraintWidth_percent="0.5"
+                app:layout_constraintTop_toBottomOf="@id/v_logout"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    <TextView
-        android:id="@+id/logout_done"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:text="로그아웃"
-        android:fontFamily="@font/pretendard"
-        android:textSize="16sp"
-        android:textColor="@color/purpleMain"
-        android:paddingVertical="18dp"
-        android:textAlignment="center"
-        app:layout_constraintWidth_percent="0.5"
-        app:layout_constraintTop_toBottomOf="@id/logout_v"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="24dp"
-        android:background="@color/gray100"
-        app:layout_constraintTop_toBottomOf="@id/logout_v"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+            <View
+                android:layout_width="1dp"
+                android:layout_height="24dp"
+                android:background="@color/gray100"
+                app:layout_constraintTop_toBottomOf="@id/v_logout"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
