--- a/app/src/main/res/layout/item_notice.xml
+++ b/app/src/main/res/layout/item_notice.xml
@@ -3,56 +3,82 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/layout_notice_gray"
-    android:padding="15dp"
-    android:layout_marginBottom="6dp">
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_profile"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:cardCornerRadius="50dp">
+    android:padding="20dp">
 
-        <ImageView
-            android:id="@+id/iv_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_profile_gray"/>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cv_notice_info"
+    <TextView
+        android:id="@+id/tv_item_notice_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toRightOf="@id/cv_profile"
+        android:text="2024.02.24"
+        android:textSize="12sp"
+        android:textColor="@color/texthigh"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_item_notice_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tv_item_notice_date"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="4dp">
 
         <TextView
-            android:id="@+id/tv_notice_contents"
+            android:id="@+id/tv_item_notice_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="버전 업데이트를 진행했어요!"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@color/texthigh"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:fontFamily="@font/pretendard_medium"
-            android:textSize="14sp"
-            android:text="OOO님이 초대코드를 보냈어요!"
-            android:textColor="@color/gray800"/>
+            app:layout_constraintStart_toStartOf="parent"/>
+        
+        <ImageView
+            android:id="@+id/iv_item_notice_top"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_angle_top"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"/>
 
-        <TextView
-            android:id="@+id/tv_notice_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_notice_contents"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:fontFamily="@font/pretendard_medium"
-            android:textSize="12sp"
-            android:textColor="@color/gray500"
-            android:text="n분 전"/>
+        <ImageView
+            android:id="@+id/iv_item_notice_down"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:src="@drawable/ic_angle_down"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="visible"/>
+        
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/tv_item_notice_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:text="내용을 입력하세요. 내용을 입력하세요. 내용을 입력하세요. 내용을 입력하세요. 내용을 입력하세요. 내용을 입력하세요. 내용을 입력하세요. 내용을 입력하세요. 내용을 입력하세요."
+        app:layout_constraintTop_toBottomOf="@id/cl_item_notice_title"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="12dp"/>
+    
+    <View
+        android:id="@+id/v_item_notice_show_content"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray100"
+        app:layout_constraintTop_toBottomOf="@id/tv_item_notice_content"
+        android:layout_marginTop="20dp"/>
+
+    <View
+        android:id="@+id/v_item_notice_hide_content"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray100"
+        app:layout_constraintTop_toBottomOf="@id/cl_item_notice_title"
+        android:layout_marginTop="20dp"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
