--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -29,7 +29,7 @@
         app:layout_constraintBottom_toBottomOf="@id/iv_notice_back_btn"/>
 
     <TextView
-        android:id="@+id/tv_notice_content"
+        android:id="@+id/tv_notice_no_content"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
         android:text="등록된 공지가 없습니다."
@@ -39,8 +39,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginStart="24dp"
         app:layout_constraintTop_toBottomOf="@id/tv_notice_title"
-        app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_notice"
@@ -49,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_notice_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginHorizontal="24dp"/>
 
 
