--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -87,7 +87,7 @@
                         android:id="@+id/tv_info_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="애플카카오"
+                        android:text=""
                         android:textColor="@color/gray800"
                         android:textSize="18sp"
                         android:fontFamily="@font/pretendard"
